# c6000-disassembler

./: Cargo.toml  README.md
src/: instruction.rs  lib.rs  main.rs
src/instruction/: branching.rs  formats.rs  fphead.rs  invalid.rs  memory.rs  moving.rs  nop.rs  parser.rs  register.rs
src/instruction/formats/: d_unit.rs  l_unit.rs  lsd.rs  m_unit.rs  no_unit.rs  s_unit.rs
