[package]
name = "c6000-disassembler"
description = "Disassembler for the TMS320C6000 series of Digital Signal Processors"
repository = "https://github.com/djordje-mancic/c6000-disassembler"
license = "MIT"
readme = "README.md"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
